--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -3,7 +3,7 @@
 \begin{appendices}
 
 \chapter{Acknowledgments}
-\section{Concept, clock model, filter values and graphs}
+\section{Contributions}
 Harald Hauglin, Chief engineer at Justervesenet was responsible for the following:
 \begin{itemize}
 	\item Describing the clock model algorithm as seen under chapter \ref{clock_model_harald}.
@@ -11,7 +11,6 @@ Harald Hauglin, Chief engineer at Justervesenet was responsible for the followin
 	\item Created the graphs used in section \ref{gpsdata_test1}, \ref{test1_measurements}, \ref{gpsdata_test2}, \ref{test2_meaurements} and \ref{unplanned_disturb}.
 	\item Calculating the preliminary filter reference values, both for clock model based filters and GPS based filters. These were based on analysis of data gathered as described under subsection \ref{data_aquisition}. Optimal choice of filter parameters is considered to be outside of the scope of this work.
 \end{itemize}
-
 Mr. Matt Davis is the author of \texttt{jdutil.py}\cite{MATT_DAVIS}, a library written for converting dates and time to MJD and back. Permission to use the jdutil.py was granted by Mr. Davis. The correspondence with Mr. Davis is included in the appendix under \ref{davis_email}.
 
 
