--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -152,7 +152,7 @@ texcl=false,
 \subtitle{A detection and mitigation system for GPS time spoofing}
 \author{Aril Johannes Schultzen}
 \begin{document}
-\duoforside[dept={Institutt for informatikk},
+\duoforside[dept={Spoof proof GPS timing},
 program={Informatikk: programmering og nettverk},
 long]
 
