--- a/thesis/spoof_test.tex
+++ b/thesis/spoof_test.tex
@@ -16,7 +16,7 @@ In order to create an accurate clock-model of the atomic clock, it was necessary
 
 Figure \ref{ibd} shows how the server, sensors and atomic clock were physically set up. In order to assure good GPS satellite geometry, the antennas were placed at the roof of Justervesenet's office at Kjeller. Antenna one was placed at a railing about one meter above the ground, antenna two was placed at ground level. Figure \ref{sensor_kart} shows the placement of the antennas. Antenna one was connected to GPS receiver one which in turn was connected to sensor one. It is the same deal with antenna two which was connected to GPS receiver two which in turn was connected to Sensor two. The distance between the two antennas was about 35 meters. The antenna connected to sensor one did not utilize the full length of its cable. This is because it proved challenging to find a place where the antenna could be placed in stable position yet use the full length of the cable. The sensors and the server were connected to LAN through a Gigabit Ethernet switch. The Server was configured to log telemetry received from the atomic clock, and the clients were configured to log all NMEA data received from the GPS receivers. The GPS receiver connected to antenna South was also used to supply the atomic clock with a one PPS signal. Because the atomic clock model needs live data over time to mature, the system was started Friday 7. October 2016 and the test was performed Monday 10. October 2016. Figure \ref{msd} is a block diagram showing how the measuring setup was physically configured. The measuring was done using a Spectracom CNT-91 frequency counter using a 10 MHz reference from Justervesenet's atomic clocks. The CNT-91 was configured to measure a continuous gap-less frequency at one second time intervals. Figure \ref{lab_setup_photo} is a photograph of the measuring setup. Both sensors were configured to use Justervesenet's internal NTP server and to use UTC instead of GMT+1.
 
-\section{Test 1 filter limits}
+\section{Test one filter limits}
 Table \ref{gps_filter_table} shows the filter thresholds used during both test 1. 
 
 \begin{table}[!htb]
@@ -193,7 +193,7 @@ Figure \ref{cns91_tel_freq} shows the relative frequency offset($10^{12}$) for t
 \end{sidewaysfigure}
 
 \newpage
-\subsection{Test 1 results}
+\subsection{Test one results}
 The observations from test 1 revealed some surprising results. When the antennas were moved horizontally, the altitude solved by sensor 2 dramatically changed. The movement also resulted in a change in the timing solution. The GPS filter did however perform as expected. We discovered that the reason why the step 5 and 6 failed to trigger the filter, was that the limit for speed (see \ref{gps_filter_table} for more) was set too high. 
 
 \section{Test 2}\label{test2}
@@ -308,7 +308,7 @@ As mentioned under subsection \ref{test2_meaurements}, the disciplining of the a
 \section{Unplanned disturbance}\label{unplanned_disturb}
 The data presented in this section was gathered while the atomic clock controller was building the clock model for one of the planned tests. The data is interesting because it shows a disturbance from an unknown cause. The data shown in the figures are from 5/10-2016 to 6/10-2016. Figure \ref{disturbance_holdover} shows that about 10 minutes after midnight the 6/10-2016, the atomic clock entered "holdover mode", indicating that the 1 PPS signal from the GPS receiver was lost. Figure \ref{disturbance_multipanel} shows the GPS receiver's solved altitude, longitude, latitude, speed and number of satellites. By examining the figure, it is obvious that the signal was lost minutes after the 57667 MJD (midnight) mark. The GPS receiver didn't achieve consistent lock before $\approx$ 57667.32 (7:45 in the morning). In the mean time, the clocks stability was impaired as figure \ref{disturbance_phase_frequency} and \ref{disturbance_phase_steer} clearly shows. Figure \ref{disturbance_phase_steer} is interesting because it shows how the atomic clock seems to have a delay in it's steering algorithm. If the atomic clock controller was applying the clock model filters while this data was collected, the phase jump filter would have triggered before the atomic clock would have been able to apply steering. 
 
-We have no idea what might be the origin of the disturbance. The following is therefor pure speculation: It is possible that if a trucker that spent the night parked by the road nearby used a GPS jammer to hide his or hers activity from an employer, that the jammer could have caused the disturbance. We did not find any traces of the disturbance when examining the logs from Sensor 1, but Sensor 1 is farther north, away from the road. It is possible that the jammer only had the range to jam Sensor 2 and not Sensor 1. The time-frame for the disturbance also supports this theory since the disturbance started around midnight and ended at around 7:45, in other words a good night sleep. This is of course only speculation as we do not have any data supporting it what so ever. 
+We have no idea what might be the origin of the disturbance. The following is therefor pure speculation: It is possible that a trucker spent the night parked by the road used a GPS jammer to hide his or hers activities from an employer, and that the disturbance is reflection of the jammer's signal. We did not find any traces of the disturbance when examining the logs from sensor one. It might have been shielded from a reflection because of it's position. The time-frame for the disturbance also supports this theory since the disturbance started around midnight and ended at around 7:45, in other words a good night sleep. This is of course only speculation as we do not have any data supporting it what so ever. 
 
 \begin{figure}[!hbt]
   \centering
