--- a/thesis/conclusion.tex
+++ b/thesis/conclusion.tex
@@ -1,6 +1,7 @@
 \documentclass[../main.tex]{subfiles}
 
 \chapter{Conclusion}
-The software that has been developed and is described in this report, demonstrates that a
-fully operational spoof proof atomic clock controller would resist a spoofing attack mounted with a sophisticated GPS spoofer like the Civil GPS spoofer. We demonstrated the
-current implementations ability to detect and mitigate a simulated spoofing attack using multi-layered defense mechanisms. The frequency steering filter made possible by the clock model, would have detected steering attempts larger than $50*10^{12}$ or 0.05 nanoseconds per seconds as shown in section \ref{test2}. Even if a spoofing attack was done carefully and slowly enough not to trigger the clock model based filters, it would not have been able to spoof two different receivers without giving away the attack. This would require multiple spoofers, spoofing individual GPS receivers. The spoofers would have to be meticulously tuned not to spoof the neighboring receiver thus giving away the attempt. This makes the whole attempt highly impractical. Introducing a third receiver, which with Sensor Server architecture is very practical, would make it even harder. It also demonstrates the efficiency of network enabling GPS receivers and using the Sensor Server architecture to analyze data collected from network enabled receivers.    
+The prototype developed and described in this report, demonstrates that a
+fully operational spoof proof atomic clock controller would resist a spoofing attack mounted with a sophisticated GPS spoofer like the Civil GPS spoofer \cite{EVPMUGA}. We demonstrated the current implementation's ability to detect and in a limited sense mitigate, a simulated spoofing attack, using multi-layered defense mechanisms. The frequency steering filter made possible by the clock model would have detected steering attempts larger than $50(10^{12})$ or 0.05 nanoseconds per seconds as shown in section \ref{test2}. Even if a spoofing attack was done carefully and slowly enough not to trigger the clock model based filters, it would not have been able to spoof two different receivers without giving away the attack (see \ref{cspakp}). This would have required multiple spoofers spoofing individual GPS receivers. The spoofers would have to be meticulously tuned in order not to spoof neighboring receivers. This makes spoofing attempts very challenging to execute. Introducing a third receiver which with sensor server architecture can be done with ease, would make it even harder. 
+
+We have demonstrated the efficiency of creating a detection network using the sensor server architecture running on commodity hardware receiving generic GPS data from commodity receivers. We have demonstrated that it is possible to detect GPS disturbances without using an atomic clock as reference but just by using GPS receivers. The detection network combined with an atomic clock and associated model may provide both detection and mitigation during a spoofing attack.
