--- a/thesis/spoof_test.tex
+++ b/thesis/spoof_test.tex
@@ -1,9 +1,9 @@
 \documentclass[../main.tex]{subfiles}
 
 \chapter{GPS manipulation tests}\label{gps_manipulation}
-In this chapter we present the tests that were conducted. Ideally these tests would have been performed by using a GPS spoofer like the "Civil GPS spoofer" that was introduced in subsection \ref{benchmark_spoofer}. Unfortunately, or perhaps not, this kind of hardware is hard to come by and spoofing GPS signals is not legal. What we did instead was manipulating the time solution of the GPS receivers by moving the antennas. By performing these tests, we where able to not only test the Server architecture in the atomic clock controller, but also the filters and the clock model. We also present data gathered during an unplanned GPS disturbance. 
+In this chapter we present the tests that were conducted. Ideally these tests would have been performed by using a GPS spoofer like the "Civil GPS spoofer" that was introduced in subsection \ref{benchmark_spoofer}. Unfortunately, or perhaps not, this kind of hardware is hard to come by and spoofing GPS signals is not legal. What we did instead was manipulating the time solution of the GPS receivers by moving the antennas, thus naively simulating a spoofing attack. By performing these tests, we where able to not only test the server architecture in the atomic clock controller, but also the filters and the clock model. We also present data gathered during an unplanned GPS disturbance. 
 
-\section{Logging of reference data }\label{data_aquisition}
+\section{Logging of reference data}\label{data_aquisition}
 In order to create an accurate clock-model of the atomic clock, it was necessary to log data from it while it was running in a disciplined mode. In the disciplined mode, the atomic clock will correct its frequency based on either a one pulse per second (PPS) signal or a 10 MHz signal as discussed earlier under section (\ref{csac_com}) A similar approach was used in order to collect GPS data. Data from two u-blox NEO-M8T was gathered over the same time period as the data gathered from the atomic clock. By gathering the data over the same period it was possible to detect any correlation between the time solved by the GPS receivers and any frequency adjustments done by the atomic clock. It also provided valuable data that could be used to tune the filters in the atomic clock controller. The data gathering was done by simple Python scripts (appendix \ref{CL} and \ref{GL}) running on a computer connected to the GPS receivers and the atomic clock. Figure (\ref{CLS}) shows a block diagram of the setup.
 
 \section{Setup}
@@ -14,7 +14,7 @@ In order to create an accurate clock-model of the atomic clock, it was necessary
    \label{ibd}
 \end{figure}
 
-Figure \ref{ibd} shows how the server, sensors and atomic clock were physically set up. In order to assure good GPS satellite geometry, the antennas were placed at the roof of Justervesenet's office at Kjeller. Antenna one was placed at a railing about one meter above the ground, antenna two was placed at ground level. Figure \ref{sensor_kart} shows the placement of the antennas. Antenna one was connected to GPS receiver one which in turn was connected to sensor one. It is the same deal with antenna two which was connected to GPS receiver two which in turn was connected to Sensor two. The distance between the two antennas was about 35 meters. The antenna connected to sensor one did not utilize the full length of its cable. This is because it proved challenging to find a place where the antenna could be placed in stable position yet use the full length of the cable. The sensors and the server were connected to LAN through a Gigabit Ethernet switch. The Server was configured to log telemetry received from the atomic clock, and the clients were configured to log all NMEA data received from the GPS receivers. The GPS receiver connected to antenna South was also used to supply the atomic clock with a one PPS signal. Because the atomic clock model needs live data over time to mature, the system was started Friday 7. October 2016 and the test was performed Monday 10. October 2016. Figure \ref{msd} is a block diagram showing how the measuring setup was physically configured. The measuring was done using a Spectracom CNT-91 frequency counter using a 10 MHz reference from Justervesenet's atomic clocks. The CNT-91 was configured to measure a continuous gap-less frequency at one second time intervals. Figure \ref{lab_setup_photo} is a photograph of the measuring setup. Both sensors were configured to use Justervesenet's internal NTP server and to use UTC instead of GMT+1.
+Figure \ref{ibd} shows how the server, sensors and atomic clock were physically set up. In order to assure good GPS satellite geometry, the antennas were placed at the roof of Justervesenet's office at Kjeller. Antenna one was placed at a railing about one meter above the ground, antenna two was placed at ground level. Figure \ref{sensor_kart} shows the placement of the antennas. Antenna one was connected to GPS receiver one which in turn was connected to sensor one. It is the same deal with antenna two which was connected to GPS receiver two which in turn was connected to Sensor two. The distance between the two antennas was about 35 meters. The antenna connected to sensor one did not utilize the full length of its cable. This is because it proved challenging to find a place where the antenna could be placed in stable position yet use the full length of the cable. The sensors and the server were connected to LAN through a Gigabit Ethernet switch. The Server was configured to log telemetry received from the atomic clock, and the clients were configured to log all NMEA data received from the GPS receivers. The GPS receiver connected to antenna South was also used to supply the atomic clock with a one PPS signal. Because the atomic clock model needs live data over time to mature, the system was started the Seventh of October, 2016 and the test was performed Tenth of October, 2016. Figure \ref{msd} is a block diagram showing how the measuring setup was physically configured. The measuring was done using a Spectracom CNT-91 frequency counter using a 10 MHz reference from Justervesenet's atomic clocks. The CNT-91 was configured to measure a continuous gap-less frequency at one second time intervals. Figure \ref{lab_setup_photo} is a photograph of the measuring setup. Both sensors were configured to use Justervesenet's internal NTP server and to use UTC instead of GMT+1.
 
 \section{Test one filter limits}
 Table \ref{gps_filter_table} shows the filter thresholds used during both test 1. 
