--- a/thesis/spoof_test.tex
+++ b/thesis/spoof_test.tex
@@ -1,10 +1,10 @@
 \documentclass[../main.tex]{subfiles}
 
 \chapter{GPS manipulation tests}\label{gps_manipulation}
-In this chapter we present the tests that were conducted. Ideally these tests would have been performed by using a GPS spoofer like the "Civil GPS spoofer" that was introduced in subsection \ref{benchmark_spoofer}. Unfortunately, or perhaps not, this kind of hardware is hard to come by and spoofing GPS signals is not legal. What we did instead was manipulating the time solution of the GPS receivers by moving the antennas, thus naively simulating a spoofing attack. By performing these tests, we where able to not only test the server architecture in the atomic clock controller, but also the filters and the clock model. We also present data gathered during an unplanned GPS disturbance. 
+In this chapter we present the tests that were conducted. Ideally these tests would have been performed by using a GPS spoofer like the "Civil GPS spoofer" that was introduced in subsection \ref{benchmark_spoofer}. Unfortunately, or perhaps not, this kind of hardware is hard to come by and spoofing GPS signals is not legal. What we did instead was manipulating the time solution of the GPS receivers by moving the antennas, thus naively simulating a spoofing attack. By performing these tests we where able to not only test the sensor server architecture part of the atomic clock controller, but also the filters and the clock model. We also present data gathered during an unplanned GPS disturbance that occurred in between our planned tests. 
 
 \section{Logging of reference data}\label{data_aquisition}
-In order to create an accurate clock-model of the atomic clock, it was necessary to log data from it while it was running in a disciplined mode. In the disciplined mode, the atomic clock will correct its frequency based on either a one pulse per second (PPS) signal or a 10 MHz signal as discussed earlier under section (\ref{csac_com}) A similar approach was used in order to collect GPS data. Data from two u-blox NEO-M8T was gathered over the same time period as the data gathered from the atomic clock. By gathering the data over the same period it was possible to detect any correlation between the time solved by the GPS receivers and any frequency adjustments done by the atomic clock. It also provided valuable data that could be used to tune the filters in the atomic clock controller. The data gathering was done by simple Python scripts (appendix \ref{CL} and \ref{GL}) running on a computer connected to the GPS receivers and the atomic clock. Figure (\ref{CLS}) shows a block diagram of the setup.
+In order to create an accurate clock model of the atomic clock, it was necessary to log data from the atomic clock while it was running in a disciplined mode. In the disciplined mode the atomic clock will correct its frequency based on either a one pulse per second (PPS) signal or a 10 MHz signal as discussed earlier under section (\ref{csac_com}). A similar approach was used in order to collect GPS data. Data from the two u-blox NEO-M8T receivers was gathered over the same time period as the data gathered from the atomic clock. By gathering the data over the same period it was possible to detect any correlation between the time solved by the GPS receivers and any frequency adjustments done by the atomic clock. It also provided valuable data that could be used to tune the detection filters. The data gathering was done by simple Python scripts (appendix \ref{CL} and \ref{GL}) running on a computer connected to the GPS receivers and the atomic clock. Figure (\ref{CLS}) shows a block diagram of the setup.
 
 \section{Setup}
 \begin{figure}
@@ -14,10 +14,10 @@ In order to create an accurate clock-model of the atomic clock, it was necessary
    \label{ibd}
 \end{figure}
 
-Figure \ref{ibd} shows how the server, sensors and atomic clock were physically set up. In order to assure good GPS satellite geometry, the antennas were placed at the roof of Justervesenet's office at Kjeller. Antenna one was placed at a railing about one meter above the ground, antenna two was placed at ground level. Figure \ref{sensor_kart} shows the placement of the antennas. Antenna one was connected to GPS receiver one which in turn was connected to sensor one. It is the same deal with antenna two which was connected to GPS receiver two which in turn was connected to Sensor two. The distance between the two antennas was about 35 meters. The antenna connected to sensor one did not utilize the full length of its cable. This is because it proved challenging to find a place where the antenna could be placed in stable position yet use the full length of the cable. The sensors and the server were connected to LAN through a Gigabit Ethernet switch. The Server was configured to log telemetry received from the atomic clock, and the clients were configured to log all NMEA data received from the GPS receivers. The GPS receiver connected to antenna South was also used to supply the atomic clock with a one PPS signal. Because the atomic clock model needs live data over time to mature, the system was started the Seventh of October, 2016 and the test was performed Tenth of October, 2016. Figure \ref{msd} is a block diagram showing how the measuring setup was physically configured. The measuring was done using a Spectracom CNT-91 frequency counter using a 10 MHz reference from Justervesenet's atomic clocks. The CNT-91 was configured to measure a continuous gap-less frequency at one second time intervals. Figure \ref{lab_setup_photo} is a photograph of the measuring setup. Both sensors were configured to use Justervesenet's internal NTP server and to use UTC instead of GMT+1.
+Figure \ref{ibd} shows how the server, sensors and atomic clock were physically set up. In order to assure good GPS satellite geometry the antennas were placed at the roof of Justervesenet's office at Kjeller. Antenna one was placed at a railing about one meter above the ground, antenna two was placed at ground level. Figure \ref{sensor_kart} shows the placement of the antennas. Antenna one was connected to GPS receiver one which in turn was connected to sensor one. It was the same deal with antenna two which was connected to GPS receiver two which in turn was connected to sensor two. The distance between the two antennas was about 35 meters. The antenna connected to sensor one was not placed as far away is the cable would have allowed. This is because it proved challenging to find a suitable place to securely place the antenna and at the same time use the full length of the cable. The sensors and the server were connected to a LAN through a Gigabit Ethernet switch. The server was configured to log telemetry received from the atomic clock and the clients were configured to log all NMEA data received from their respective GPS receiver. GPS receiver two  supplied the atomic clock with a one PPS signal. Because the atomic clock model needs live data over time to mature, the system was started the Seventh of October, 2016 and the test was performed Tenth of October, 2016. Figure \ref{msd} is a block diagram showing how the measuring setup was physically configured. The measuring was done using a Spectracom CNT-91 frequency counter using a 10 MHz reference from Justervesenet's atomic clocks. The CNT-91 was configured to measure a continuous gap-less frequency at one second time-intervals. Figure \ref{lab_setup_photo} is a photograph of the measuring setup. Both sensors were configured to use Justervesenet's internal NTP server and to use UTC instead of GMT+1.
 
 \section{Test one filter limits}
-Table \ref{gps_filter_table} shows the filter thresholds used during both test 1. 
+Table \ref{gps_filter_table} shows the filter thresholds used during test 1. 
 
 \begin{table}[!htb]
 \centering
@@ -25,7 +25,7 @@ Table \ref{gps_filter_table} shows the filter thresholds used during both test 1
 \label{gps_filter_table}
   \begin{tabular}{|l|l|l|}
   \hline
-  \multicolumn{1}{|c|}{} & \multicolumn{1}{c|}{Sensor 1} & \multicolumn{1}{c|}{Sensor 2} \\ \hline
+  \multicolumn{1}{|c|}{} & \multicolumn{1}{c|}{Sensor one} & \multicolumn{1}{c|}{Sensor two} \\ \hline
   Altitude reference                 & 123.8                         & 122.427                       \\ \hline
   Longitude reference                & 1102.1948                     & 1102.1934                     \\ \hline
   Latitude reference                 & 5958.5448                     & 5958.5231                     \\ \hline
@@ -47,7 +47,7 @@ Table \ref{gps_filter_table} shows the filter thresholds used during both test 1
 \begin{figure}[!htb]
 \centering
   \includegraphics[scale=0.25]{roof.pdf}
-   \caption[Measurement setup]{Block diagram showing the position of the antennas as reported by the receivers. Map courtesy of Norgeskart\cite{KART}}
+   \caption[Measurement setup]{Block diagram showing the position of the antennas as reported by the receivers. Map courtesy of Kartverket \cite{KART}}
    \label{sensor_kart}
 \end{figure}
 
@@ -56,7 +56,7 @@ Table \ref{gps_filter_table} shows the filter thresholds used during both test 1
 The goal with test one was to use the atomic clock controller to detect a simulated spoofing attack. By moving the antennas the location and speed filter should be triggered as the solved longitude, altitude, latitude and speed change. See \ref{ls_filter} for more about the location and speed filter. The result would be observable by analyzing the log files produced by the server and clients and the data collected by the measuring setup.
 
 \subsection{Description}\label{test1_description}
-The following is a step by step description describing how the test was conducted. The time in the brackets was obtained from a wristwatch. The time is written in the normal format as well as number of seconds after 10:48. This is because the data used to draw the graphs started at 10:48 but uses seconds in the X axis. Comparison is therefore easier. It is important to note that nor the resolution or accuracy was of any notable concern when writing down the time. The time was mainly noted to make it easier to find any correlation between the steps taken and patterns found in the log files. 
+The following is a step by step description describing how the test was conducted. The time in the brackets was obtained from a wristwatch. The time is written in the normal format (hours and minutes) as well as number of seconds after 10:48. This is because the data used to draw the graphs started at 10:48 but uses seconds in the X axis. Comparison is therefore easier. It is important to note that nor the resolution or accuracy was of any notable concern when the time was noted down. The time was mainly noted to make it easier to find any correlation between the steps taken and patterns found in the log files. 
 
 \begin{itemize}
   \item\relax 10:58 - 600: Moved antenna 1 approximately 15 meters to the south.
@@ -71,38 +71,38 @@ The following is a step by step description describing how the test was conducte
   \item\relax 11:33 - 2700: Removed foil from antenna 2.
 \end{itemize}
 
-Step one and two were designed to trigger the location and speed filter, especially the check of solved latitude, longitude and altitude but also the speed against known values. Step five and six were also designed to trigger the location and speed filter but more specifically the checking of solved speed. Step seven and eight were to designed to reveal what would happen during a jamming attack as it was believed that covering the antennas with aluminium foil would block all signals out. A photography showing how the antenna was covered, can be seen under section \ref{antenna_foil_cover}.
+Step one and two were designed to trigger the location and speed filter, especially the check of solved latitude, longitude and altitude but also the speed against known values. Step five and six were also designed to trigger the location and speed filter but more specifically the checking of solved speed. By waving the antenna around while standing still, the solved location should not exceed the configured limits except for speed. Step seven and eight were designed to reveal what would happen during a jamming attack as it was believed that covering the antennas with aluminium foil would block all signals out. A photography showing how the antenna was covered with aluminium foil can be seen in section \ref{antenna_foil_cover} in the appendix.
 
 \subsection{Observations}\label{test1_observations}
 \subsubsection{Sensor Server logs}
-By reviewing the log produced by the Sensor Server, the following was observed:
+By reviewing the log produced by the server, the following was observed:
 
 \begin{itemize}
-  \item No false positives, the filters were not triggered before the test started.
-  \item The location and speed filter was triggered by Sensor 1 at 10:59:19 and cleared at 11:04:35.
+  \item No false positives were reported. The filters were not triggered before the test started.
+  \item The location and speed filter was triggered by sensor one at 10:59:19 and cleared at 11:04:35.
   \begin{lstlisting}
     [10/10/16 - 10:59:17] [ ALARM ] Sensor 1 triggered LS filter!
     ...
     [10/10/16 - 11:04:35] [ ALARM ] Sensor 1 cleared LS filter!
   \end{lstlisting}
-  \item The location and speed filter was triggered again at 11:08:27, but this time by Sensor 2. The alarm was cleared at 11:13:43.
+  \item The location and speed filter was triggered again at 11:08:27, but this time by sensor one. The alarm was cleared at 11:13:43.
     \begin{lstlisting}
     [10/10/16 - 11:08:27] [ ALARM ] Sensor 2 triggered LS filter!
     ...
     [10/10/16 - 11:13:43] [ ALARM ] Sensor 2 cleared LS filter!
   \end{lstlisting}
-  \item Once again, 11:22:03 the location and speed filter was triggered by Sensor 1 and was not cleared until 11:29:21
+  \item Once again, 11:22:03 the location and speed filter was triggered by sensor one and was not cleared until 11:29:21
      \begin{lstlisting}
     [10/10/16 - 11:22:03] [ ALARM ] Sensor 1 triggered LS filter!
     ...
     [10/10/16 - 11:29:21] [ ALARM ] Sensor 1 cleared LS filter!
   \end{lstlisting} 
-  \item Sensor 2 triggered the location and speed filter 11:27:31 and cleared at 11:34:16.
+  \item Sensor two triggered the location and speed filter 11:27:31 and cleared at 11:34:16.
     \begin{lstlisting}
     [10/10/16 - 11:27:31] [ ALARM ] Sensor 2 triggered LS filter!
     [10/10/16 - 11:34:16] [ ALARM ] Sensor 2 cleared LS filter!
   \end{lstlisting} 
-  \item The last 3 seconds, Sensor 2 triggered and cleared the location and speed filter.
+  \item The last three seconds, sensor two triggered and cleared the location and speed filter.
   \begin{lstlisting}
     [10/10/16 - 11:34:17] [ ALARM ] Sensor 2 triggered LS filter!
     [10/10/16 - 11:34:20] [ ALARM ] Sensor 2 cleared LS filter!
